--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>App Title</title>
+    <!-- 這裡是註解文字，只會在 HTML code 裡看到，不會出現在畫面 -->
     <style>
         html, body, body > div, #container, #container-uiarea {
             height: 100% ;
